Fixed ManageGym alignment

--- a/front-end/src/components/GymCard/GymCard.css
+++ b/front-end/src/components/GymCard/GymCard.css
@@ -1,11 +1,6 @@
-.gymCard{
-  width: 95% !important;
-  height:100px !important;
-  margin-bottom: 5px !important;
-}
+
 .my-custom-class{
     --backdrop-opacity: 0.7;
-
     
 }
 
