--- a/front-end/src/pages/OwnerProfile/OwnerProfile.css
+++ b/front-end/src/pages/OwnerProfile/OwnerProfile.css
@@ -1,8 +1,4 @@
 
-.profileCard{
-    width:25em;
-}
-
 .bigNumber{
     font-size: 2em;
 }
