--- a/front-end/src/theme/variables.css
+++ b/front-end/src/theme/variables.css
@@ -271,6 +271,9 @@ ion-card{
   margin-top: 1%;
   margin-bottom: 1%;
 }
+.gCard{
+  padding:4%;
+}
 
 
 
